# trab-streaming

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  trab.cast
data/json_data/: results_central_1.json  results_central_10.json  results_central_11.json  results_central_12.json  results_central_13.json  results_central_14.json  results_central_15.json  results_central_16.json  results_central_17.json  results_central_18.json  results_central_19.json  results_central_2.json  results_central_3.json  results_central_4.json  results_central_5.json  results_central_6.json  results_central_7.json  results_central_8.json  results_central_9.json  results_leste_1.json  results_leste_10.json  results_leste_11.json  results_leste_12.json  results_leste_13.json  results_leste_14.json  results_leste_15.json  results_leste_16.json  results_leste_17.json  results_leste_18.json  results_leste_19.json  results_leste_2.json  results_leste_3.json  results_leste_4.json  results_leste_5.json  results_leste_6.json  results_leste_7.json  results_leste_8.json  results_leste_9.json  results_norte_1.json  results_norte_10.json  (+55 more)
spark/: Dockerfile
src/: processing.py  scrap.py  streaming.py
