[tool.poetry]
name = "streaming"
version = "0.1.0"
description = ""
authors = ["Giancarlo Lester <gatobugado.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^5.1.0"
pyspark = "3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = [".venv", ".ruff_cache", ".mypy_cache"]
ignore = ["F401"]
line-length = 100
select = ["E", "F", "W"]
